[package]
edition = "2018"
name = "clinews"
version = "0.1.0"

authors = ["sebbev"]
description = "Clinews is a news aggregator for the command line"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
dotenv = "0.15.0"
newsapi = {git = "https://github.com/Sebbev/newsapi.git", features = ["async"]}
tokio = {version = "1.16.1", features = ["full"]}
